logistic model by line of song works

--- a/notebooks/models_play.ipynb
+++ b/notebooks/models_play.ipynb
@@ -92,21 +92,428 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run src/logistic_model.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contains_minor</th>\n",
+       "      <th>lyrics</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>One by one they followed the sun One by one un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>False</td>\n",
+       "      <td>I went to the doctor he says I'm alright I kne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>False</td>\n",
+       "      <td>When she said Don't waste your words they're j...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Take a trip with me in 1913 To Calumet Michiga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>True</td>\n",
+       "      <td>One by one they followed the sun One by one un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>False</td>\n",
+       "      <td>I went to the doctor he says I'm alright I kne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>True</td>\n",
+       "      <td>As I went out one morning to breathe the air a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>True</td>\n",
+       "      <td>One by one they followed the sun One by one un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>False</td>\n",
+       "      <td>I went to the doctor he says I'm alright I kne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>False</td>\n",
+       "      <td>When she said Don't waste your words they're j...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Take a trip with me in 1913 To Calumet Michiga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>True</td>\n",
+       "      <td>One by one they followed the sun One by one un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>False</td>\n",
+       "      <td>I went to the doctor he says I'm alright I kne...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Well I m down here on this track Not a shirt u...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>False</td>\n",
+       "      <td>I've got a couple more years on you babe and t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Oh where have you been my blue eyed son Oh whe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>False</td>\n",
+       "      <td>How many times have you heard someone say If I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>False</td>\n",
+       "      <td>How many times have you heard someone say If I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Down the street the dogs are barking and the d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>True</td>\n",
+       "      <td>My heart is telling me I love you still I can ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>True</td>\n",
+       "      <td>My heart is telling me I love you still I can ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>True</td>\n",
+       "      <td>My heart is telling me I love you still I can ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>True</td>\n",
+       "      <td>I can see the turning of the key I ve been dec...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe If'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Well it ain't no use to sit and wonder why bab...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe It ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe If ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe It ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Well it ain t no use to sit and wonder why bab...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe If ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Am 02210 C7 32310 Well it ain't no use to sit ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe If ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>True</td>\n",
+       "      <td>It ain't no use to sit and wonder why babe It ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Down along the cove Down along the cove I spie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Oh mos' feet and it hang can't you see I groan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Oh help me in my weakness I heard the drifter ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Oh help me in my weakness I heard the drifter ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Twinkle twinkle little star Long comes Brady i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Listen to that Duquesne whistle blowing Blowin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Aadd4 X0000020200 Listen to that Duquesne whis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>False</td>\n",
+       "      <td>C11 888988 Ah the early Roman kings in their s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>True</td>\n",
+       "      <td>are you here upside down well we're living on ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Come baby find me come baby remind me of where...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>False</td>\n",
+       "      <td>I sang the song slowly As she stood in the sha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>True</td>\n",
+       "      <td>A9sus4 x05430 In the time of my confession in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>208</th>\n",
+       "      <td>True</td>\n",
+       "      <td>In the time of my confession in the hour of my...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>False</td>\n",
+       "      <td>In the time of my confession in the hour of my...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210</th>\n",
+       "      <td>True</td>\n",
+       "      <td>In the time of my confession in the hour of my...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Broken lines broken strings broken threads bro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Oh it's fare thee well my darlin' true I'm lea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Oh it's fare thee well my darlin' true I'm lea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>True</td>\n",
+       "      <td>Farewell Angelina the bells of the crown Are b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>False</td>\n",
+       "      <td>Farewell Angelina The bells of the crown Are b...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>216 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1a1d796fd0>"
+       "     contains_minor                                             lyrics\n",
+       "0              True  As I went out one morning to breathe the air a...\n",
+       "1              True  As I went out one morning to breathe the air a...\n",
+       "2              True  As I went out one morning to breathe the air a...\n",
+       "3              True  As I went out one morning to breathe the air a...\n",
+       "4              True  One by one they followed the sun One by one un...\n",
+       "5             False  I went to the doctor he says I'm alright I kne...\n",
+       "6             False  When she said Don't waste your words they're j...\n",
+       "7             False  Take a trip with me in 1913 To Calumet Michiga...\n",
+       "8              True  One by one they followed the sun One by one un...\n",
+       "9             False  I went to the doctor he says I'm alright I kne...\n",
+       "10             True  As I went out one morning to breathe the air a...\n",
+       "11             True  As I went out one morning to breathe the air a...\n",
+       "12             True  As I went out one morning to breathe the air a...\n",
+       "13             True  As I went out one morning to breathe the air a...\n",
+       "14             True  One by one they followed the sun One by one un...\n",
+       "15            False  I went to the doctor he says I'm alright I kne...\n",
+       "16            False  When she said Don't waste your words they're j...\n",
+       "17            False  Take a trip with me in 1913 To Calumet Michiga...\n",
+       "18             True  One by one they followed the sun One by one un...\n",
+       "19            False  I went to the doctor he says I'm alright I kne...\n",
+       "20             True  Well I m down here on this track Not a shirt u...\n",
+       "21            False  I've got a couple more years on you babe and t...\n",
+       "22            False  Oh where have you been my blue eyed son Oh whe...\n",
+       "23            False  How many times have you heard someone say If I...\n",
+       "24            False  How many times have you heard someone say If I...\n",
+       "25            False  Down the street the dogs are barking and the d...\n",
+       "26             True  My heart is telling me I love you still I can ...\n",
+       "27             True  My heart is telling me I love you still I can ...\n",
+       "28             True  My heart is telling me I love you still I can ...\n",
+       "29             True  I can see the turning of the key I ve been dec...\n",
+       "..              ...                                                ...\n",
+       "186            True  It ain't no use to sit and wonder why babe If'...\n",
+       "187            True  Well it ain't no use to sit and wonder why bab...\n",
+       "188            True  It ain't no use to sit and wonder why babe It ...\n",
+       "189            True  It ain't no use to sit and wonder why babe If ...\n",
+       "190            True  It ain't no use to sit and wonder why babe It ...\n",
+       "191            True  Well it ain t no use to sit and wonder why bab...\n",
+       "192            True  It ain't no use to sit and wonder why babe If ...\n",
+       "193            True  Am 02210 C7 32310 Well it ain't no use to sit ...\n",
+       "194            True  It ain't no use to sit and wonder why babe If ...\n",
+       "195            True  It ain't no use to sit and wonder why babe It ...\n",
+       "196           False  Down along the cove Down along the cove I spie...\n",
+       "197           False  Oh mos' feet and it hang can't you see I groan...\n",
+       "198           False  Oh help me in my weakness I heard the drifter ...\n",
+       "199           False  Oh help me in my weakness I heard the drifter ...\n",
+       "200           False  Twinkle twinkle little star Long comes Brady i...\n",
+       "201            True  Listen to that Duquesne whistle blowing Blowin...\n",
+       "202           False  Aadd4 X0000020200 Listen to that Duquesne whis...\n",
+       "203           False  C11 888988 Ah the early Roman kings in their s...\n",
+       "204            True  are you here upside down well we're living on ...\n",
+       "205            True  Come baby find me come baby remind me of where...\n",
+       "206           False  I sang the song slowly As she stood in the sha...\n",
+       "207            True  A9sus4 x05430 In the time of my confession in ...\n",
+       "208            True  In the time of my confession in the hour of my...\n",
+       "209           False  In the time of my confession in the hour of my...\n",
+       "210            True  In the time of my confession in the hour of my...\n",
+       "211           False  Broken lines broken strings broken threads bro...\n",
+       "212           False  Oh it's fare thee well my darlin' true I'm lea...\n",
+       "213           False  Oh it's fare thee well my darlin' true I'm lea...\n",
+       "214            True  Farewell Angelina the bells of the crown Are b...\n",
+       "215           False  Farewell Angelina The bells of the crown Are b...\n",
+       "\n",
+       "[216 rows x 2 columns]"
       ]
      },
+     "execution_count": 97,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run src/logistic_model.py"
+    "df_logi_song"
    ]
   },
   {
