--- a/notebooks/chord_by_chord_modeling.ipynb
+++ b/notebooks/chord_by_chord_modeling.ipynb
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7745"
+       "7811"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,580 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('5afde0942a1a05fe393db76d'),\n",
-       " 'chord_idxs': [[0, 'G'],\n",
-       "  [6, 'D'],\n",
-       "  [12, 'Em'],\n",
-       "  [19, 'C'],\n",
-       "  [25, 'G'],\n",
-       "  [30, 'D'],\n",
-       "  [36, 'Em'],\n",
-       "  [41, 'C'],\n",
-       "  [45, 'G'],\n",
-       "  [50, 'D'],\n",
-       "  [54, 'Em'],\n",
-       "  [56, 'C'],\n",
-       "  [62, 'G'],\n",
-       "  [68, 'D'],\n",
-       "  [75, 'Em'],\n",
-       "  [77, 'C'],\n",
-       "  [83, 'G'],\n",
-       "  [89, 'D'],\n",
-       "  [95, 'Em'],\n",
-       "  [98, 'G'],\n",
-       "  [105, 'D'],\n",
-       "  [111, 'Em'],\n",
-       "  [115, 'C'],\n",
-       "  [121, 'G'],\n",
-       "  [123, 'D'],\n",
-       "  [127, 'Em'],\n",
-       "  [132, 'C'],\n",
-       "  [137, 'G'],\n",
-       "  [145, 'G'],\n",
-       "  [151, 'D'],\n",
-       "  [158, 'Em'],\n",
-       "  [165, 'C'],\n",
-       "  [171, 'G'],\n",
-       "  [176, 'D'],\n",
-       "  [181, 'Em'],\n",
-       "  [185, 'C'],\n",
-       "  [194, 'G'],\n",
-       "  [197, 'D'],\n",
-       "  [204, 'Em'],\n",
-       "  [209, 'C'],\n",
-       "  [215, 'G'],\n",
-       "  [219, 'D'],\n",
-       "  [228, 'Em'],\n",
-       "  [233, 'C'],\n",
-       "  [237, 'G'],\n",
-       "  [243, 'D'],\n",
-       "  [249, 'Em'],\n",
-       "  [252, 'G'],\n",
-       "  [259, 'D'],\n",
-       "  [265, 'Em'],\n",
-       "  [269, 'C'],\n",
-       "  [275, 'G'],\n",
-       "  [277, 'D'],\n",
-       "  [281, 'Em'],\n",
-       "  [286, 'C'],\n",
-       "  [291, 'G'],\n",
-       "  [299, 'G'],\n",
-       "  [306, 'D'],\n",
-       "  [311, 'Em'],\n",
-       "  [317, 'C'],\n",
-       "  [319, 'G'],\n",
-       "  [326, 'D'],\n",
-       "  [331, 'Em'],\n",
-       "  [338, 'C'],\n",
-       "  [342, 'G'],\n",
-       "  [348, 'D'],\n",
-       "  [354, 'Em'],\n",
-       "  [357, 'G'],\n",
-       "  [364, 'D'],\n",
-       "  [370, 'Em'],\n",
-       "  [374, 'C'],\n",
-       "  [380, 'G'],\n",
-       "  [382, 'D'],\n",
-       "  [386, 'Em'],\n",
-       "  [391, 'C'],\n",
-       "  [396, 'G'],\n",
-       "  [404, 'Em'],\n",
-       "  [409, 'C'],\n",
-       "  [415, 'G'],\n",
-       "  [418, 'D'],\n",
-       "  [421, 'Em'],\n",
-       "  [425, 'C'],\n",
-       "  [432, 'G'],\n",
-       "  [435, 'D'],\n",
-       "  [441, 'Em'],\n",
-       "  [443, 'C'],\n",
-       "  [445, 'G'],\n",
-       "  [450, 'D'],\n",
-       "  [454, 'Em'],\n",
-       "  [456, 'C'],\n",
-       "  [459, 'G'],\n",
-       "  [462, 'D']],\n",
-       " 'words': ['The',\n",
-       "  'story',\n",
-       "  'starts',\n",
-       "  'when',\n",
-       "  'it',\n",
-       "  'was',\n",
-       "  'hot',\n",
-       "  'and',\n",
-       "  'it',\n",
-       "  'was',\n",
-       "  'Summer',\n",
-       "  'and',\n",
-       "  'I',\n",
-       "  'had',\n",
-       "  'it',\n",
-       "  'all',\n",
-       "  'I',\n",
-       "  'had',\n",
-       "  'him',\n",
-       "  'right',\n",
-       "  'there',\n",
-       "  'where',\n",
-       "  'I',\n",
-       "  'wanted',\n",
-       "  'him',\n",
-       "  'She',\n",
-       "  'came',\n",
-       "  'along',\n",
-       "  'got',\n",
-       "  'him',\n",
-       "  'alone',\n",
-       "  'and',\n",
-       "  \"let's\",\n",
-       "  'hear',\n",
-       "  'the',\n",
-       "  'applause',\n",
-       "  'She',\n",
-       "  'took',\n",
-       "  'him',\n",
-       "  'faster',\n",
-       "  'than',\n",
-       "  'you',\n",
-       "  'could',\n",
-       "  'say',\n",
-       "  'sabotage',\n",
-       "  'I',\n",
-       "  'never',\n",
-       "  'saw',\n",
-       "  'it',\n",
-       "  'coming',\n",
-       "  \"wouldn't\",\n",
-       "  'have',\n",
-       "  'suspected',\n",
-       "  'it',\n",
-       "  'I',\n",
-       "  'underestimated',\n",
-       "  'just',\n",
-       "  'who',\n",
-       "  'I',\n",
-       "  'was',\n",
-       "  'dealing',\n",
-       "  'with',\n",
-       "  'She',\n",
-       "  'had',\n",
-       "  'to',\n",
-       "  'know',\n",
-       "  'the',\n",
-       "  'pain',\n",
-       "  'was',\n",
-       "  'beating',\n",
-       "  'on',\n",
-       "  'me',\n",
-       "  'like',\n",
-       "  'a',\n",
-       "  'drum',\n",
-       "  'She',\n",
-       "  'underestimated',\n",
-       "  'just',\n",
-       "  'who',\n",
-       "  'she',\n",
-       "  'was',\n",
-       "  'stealing',\n",
-       "  'from',\n",
-       "  \"She's\",\n",
-       "  'not',\n",
-       "  'a',\n",
-       "  'saint',\n",
-       "  'and',\n",
-       "  \"she's\",\n",
-       "  'not',\n",
-       "  'what',\n",
-       "  'you',\n",
-       "  'think',\n",
-       "  \"She's\",\n",
-       "  'an',\n",
-       "  'actress',\n",
-       "  'whoa',\n",
-       "  'But',\n",
-       "  \"she's\",\n",
-       "  'better',\n",
-       "  'known',\n",
-       "  'for',\n",
-       "  'the',\n",
-       "  'things',\n",
-       "  'that',\n",
-       "  'she',\n",
-       "  'does',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'mattress',\n",
-       "  'Whoa',\n",
-       "  'Soon',\n",
-       "  \"she's\",\n",
-       "  'gonna',\n",
-       "  'find',\n",
-       "  'stealing',\n",
-       "  'other',\n",
-       "  \"people's\",\n",
-       "  'toys',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'playground',\n",
-       "  \"won't\",\n",
-       "  'make',\n",
-       "  'you',\n",
-       "  'many',\n",
-       "  'friends',\n",
-       "  'She',\n",
-       "  'should',\n",
-       "  'keep',\n",
-       "  'in',\n",
-       "  'mind',\n",
-       "  'She',\n",
-       "  'should',\n",
-       "  'keep',\n",
-       "  'in',\n",
-       "  'mind',\n",
-       "  'There',\n",
-       "  'is',\n",
-       "  'nothing',\n",
-       "  'I',\n",
-       "  'do',\n",
-       "  'better',\n",
-       "  'than',\n",
-       "  'revenge',\n",
-       "  'She',\n",
-       "  'looks',\n",
-       "  'at',\n",
-       "  'life',\n",
-       "  'like',\n",
-       "  \"it's\",\n",
-       "  'a',\n",
-       "  'party',\n",
-       "  'and',\n",
-       "  \"she's\",\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'list',\n",
-       "  'She',\n",
-       "  'looks',\n",
-       "  'at',\n",
-       "  'me',\n",
-       "  'like',\n",
-       "  \"I'm\",\n",
-       "  'a',\n",
-       "  'trend',\n",
-       "  'and',\n",
-       "  \"she's\",\n",
-       "  'so',\n",
-       "  'over',\n",
-       "  'it',\n",
-       "  'I',\n",
-       "  'think',\n",
-       "  'her',\n",
-       "  'ever',\n",
-       "  'present',\n",
-       "  'frown',\n",
-       "  'is',\n",
-       "  'a',\n",
-       "  'little',\n",
-       "  'troubling',\n",
-       "  'She',\n",
-       "  'thinks',\n",
-       "  \"I'm\",\n",
-       "  'psycho',\n",
-       "  'cause',\n",
-       "  'I',\n",
-       "  'like',\n",
-       "  'to',\n",
-       "  'rhyme',\n",
-       "  'her',\n",
-       "  'name',\n",
-       "  'with',\n",
-       "  'things',\n",
-       "  'But',\n",
-       "  'sophistication',\n",
-       "  \"isn't\",\n",
-       "  'what',\n",
-       "  'you',\n",
-       "  'wear',\n",
-       "  'or',\n",
-       "  'who',\n",
-       "  'you',\n",
-       "  'know',\n",
-       "  'Or',\n",
-       "  'pushing',\n",
-       "  'people',\n",
-       "  'down',\n",
-       "  'to',\n",
-       "  'get',\n",
-       "  'you',\n",
-       "  'where',\n",
-       "  'you',\n",
-       "  'wanna',\n",
-       "  'go',\n",
-       "  'They',\n",
-       "  \"didn't\",\n",
-       "  'teach',\n",
-       "  'you',\n",
-       "  'that',\n",
-       "  'in',\n",
-       "  'prep',\n",
-       "  'school',\n",
-       "  'so',\n",
-       "  \"it's\",\n",
-       "  'up',\n",
-       "  'to',\n",
-       "  'me',\n",
-       "  'That',\n",
-       "  'no',\n",
-       "  'amount',\n",
-       "  'of',\n",
-       "  'vintage',\n",
-       "  'dresses',\n",
-       "  'gives',\n",
-       "  'you',\n",
-       "  'dignity',\n",
-       "  \"She's\",\n",
-       "  'not',\n",
-       "  'a',\n",
-       "  'saint',\n",
-       "  'and',\n",
-       "  \"she's\",\n",
-       "  'not',\n",
-       "  'what',\n",
-       "  'you',\n",
-       "  'think',\n",
-       "  \"She's\",\n",
-       "  'an',\n",
-       "  'actress',\n",
-       "  'whoa',\n",
-       "  'But',\n",
-       "  \"she's\",\n",
-       "  'better',\n",
-       "  'known',\n",
-       "  'for',\n",
-       "  'the',\n",
-       "  'things',\n",
-       "  'that',\n",
-       "  'she',\n",
-       "  'does',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'mattress',\n",
-       "  'Whoa',\n",
-       "  'Soon',\n",
-       "  \"she's\",\n",
-       "  'gonna',\n",
-       "  'find',\n",
-       "  'stealing',\n",
-       "  'other',\n",
-       "  \"people's\",\n",
-       "  'toys',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'playground',\n",
-       "  \"won't\",\n",
-       "  'make',\n",
-       "  'you',\n",
-       "  'many',\n",
-       "  'friends',\n",
-       "  'She',\n",
-       "  'should',\n",
-       "  'keep',\n",
-       "  'in',\n",
-       "  'mind',\n",
-       "  'She',\n",
-       "  'should',\n",
-       "  'keep',\n",
-       "  'in',\n",
-       "  'mind',\n",
-       "  'There',\n",
-       "  'is',\n",
-       "  'nothing',\n",
-       "  'I',\n",
-       "  'do',\n",
-       "  'better',\n",
-       "  'than',\n",
-       "  'revenge',\n",
-       "  \"I'm\",\n",
-       "  'just',\n",
-       "  'another',\n",
-       "  'thing',\n",
-       "  'for',\n",
-       "  'you',\n",
-       "  'to',\n",
-       "  'roll',\n",
-       "  'your',\n",
-       "  'eyes',\n",
-       "  'at',\n",
-       "  'honey',\n",
-       "  'You',\n",
-       "  'might',\n",
-       "  'have',\n",
-       "  'him',\n",
-       "  'but',\n",
-       "  \"haven't\",\n",
-       "  'you',\n",
-       "  'heard',\n",
-       "  \"I'm\",\n",
-       "  'just',\n",
-       "  'another',\n",
-       "  'thing',\n",
-       "  'for',\n",
-       "  'you',\n",
-       "  'to',\n",
-       "  'roll',\n",
-       "  'your',\n",
-       "  'eyes',\n",
-       "  'at',\n",
-       "  'honey',\n",
-       "  'You',\n",
-       "  'might',\n",
-       "  'have',\n",
-       "  'him',\n",
-       "  'but',\n",
-       "  'I',\n",
-       "  'always',\n",
-       "  'get',\n",
-       "  'the',\n",
-       "  'last',\n",
-       "  'word',\n",
-       "  \"She's\",\n",
-       "  'not',\n",
-       "  'a',\n",
-       "  'saint',\n",
-       "  'and',\n",
-       "  \"she's\",\n",
-       "  'not',\n",
-       "  'what',\n",
-       "  'you',\n",
-       "  'think',\n",
-       "  \"She's\",\n",
-       "  'an',\n",
-       "  'actress',\n",
-       "  'whoa',\n",
-       "  'But',\n",
-       "  \"she's\",\n",
-       "  'better',\n",
-       "  'known',\n",
-       "  'for',\n",
-       "  'the',\n",
-       "  'things',\n",
-       "  'that',\n",
-       "  'she',\n",
-       "  'does',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'mattress',\n",
-       "  'Whoa',\n",
-       "  'Soon',\n",
-       "  \"she's\",\n",
-       "  'gonna',\n",
-       "  'find',\n",
-       "  'stealing',\n",
-       "  'other',\n",
-       "  \"people's\",\n",
-       "  'toys',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'playground',\n",
-       "  \"won't\",\n",
-       "  'make',\n",
-       "  'you',\n",
-       "  'many',\n",
-       "  'friends',\n",
-       "  'She',\n",
-       "  'should',\n",
-       "  'keep',\n",
-       "  'in',\n",
-       "  'mind',\n",
-       "  'She',\n",
-       "  'should',\n",
-       "  'keep',\n",
-       "  'in',\n",
-       "  'mind',\n",
-       "  'There',\n",
-       "  'is',\n",
-       "  'nothing',\n",
-       "  'I',\n",
-       "  'do',\n",
-       "  'better',\n",
-       "  'than',\n",
-       "  'revenge',\n",
-       "  'Do',\n",
-       "  'you',\n",
-       "  'still',\n",
-       "  'feel',\n",
-       "  'like',\n",
-       "  'you',\n",
-       "  'know',\n",
-       "  'what',\n",
-       "  \"you're\",\n",
-       "  'doing',\n",
-       "  'Cause',\n",
-       "  'I',\n",
-       "  \"don't\",\n",
-       "  'think',\n",
-       "  'you',\n",
-       "  'do',\n",
-       "  'Oh',\n",
-       "  'do',\n",
-       "  'you',\n",
-       "  'still',\n",
-       "  'feel',\n",
-       "  'like',\n",
-       "  'you',\n",
-       "  'know',\n",
-       "  'what',\n",
-       "  \"you're\",\n",
-       "  'doing',\n",
-       "  'I',\n",
-       "  \"don't\",\n",
-       "  'think',\n",
-       "  'you',\n",
-       "  'do',\n",
-       "  'I',\n",
-       "  \"don't\",\n",
-       "  'think',\n",
-       "  'you',\n",
-       "  'do',\n",
-       "  \"Let's\",\n",
-       "  'hear',\n",
-       "  'the',\n",
-       "  'applause',\n",
-       "  'Come',\n",
-       "  'on',\n",
-       "  'show',\n",
-       "  'me',\n",
-       "  'how',\n",
-       "  'much',\n",
-       "  'better',\n",
-       "  'you',\n",
-       "  'are',\n",
-       "  'See',\n",
-       "  'you',\n",
-       "  'deserve',\n",
-       "  'some',\n",
-       "  'applause',\n",
-       "  'Cause',\n",
-       "  \"you're\",\n",
-       "  'so',\n",
-       "  'much',\n",
-       "  'better']}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "parsed_songs[4444]"
+    "parsed_songs[4444];"
    ]
   },
   {
